<resources>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">APP ID</string>
    <string name="back4app_client_key">CLIENT KEY</string>
    <string name="app_name">Heruhe</string>
    <string name="email">Email</string>
    <string name="verify_email">Please verify your email</string>
    <string name="okay">Okay</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="success_signup">One last step. \n  Check your email and confirm your account </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email_username">Username</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="login_caption">Log into your account</string>
    <string name="signup_caption">Come On Board</string>
    <string name="invalid_credentials">Invalid Credentials </string>
    <string name="login">Login</string>
    <string name="login_option">Already have an account ? </string>
    <string name="signup_option">Don\'t have an account ?</string>
    <string name="signup">SignUp</string>
    <string name="email_error">Please enter a valid email</string>
    <string name="email_error_login">%s \n %s</string>
    <string name="username_error_login">Please enter a valid username </string>
    <string name="username_error">Username must include only  lowercase and numeric/"_" characters  </string>
    <string name="password_error">Please enter a valid password</string>
    <string name="password_error_invalid">Invalid Password</string>
    <string name="password_error_number">Password must include at least one number</string>
    <string name="password_error_lowercase">Password must include at least one lowercase character</string>
    <string name="password_error_uppercase">Password must include at least one uppercase character</string>
    <string name="password_error_length">Password must be at least eight characters long</string>
    <string name="password_error_symbol">Password must include at least one special character "%$@*#/&amp;"</string>
    <string name="confirm_password_error">Password does not match </string>
    <string name="hang_in_there">Hang in there …</string>
    <string name="add_post">Add Post </string>
    <string name="snack_pick_an_image">"Please select at least one image"</string>
    <string name="delete">Delete</string>
    <string name="next">Next</string>
    <string name="finish_post">Publish </string>
    <string name="post_caption">Enter post caption here </string>
    <string name="post_image">Post Image</string>
    <string name="add_post_image_index">%d / %d</string>
    <string name="post">Post</string>
    <string name="add_photo">Add Photo</string>
    <string name="format_date">%s %s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="cover_content">Cover Photo</string>
    <string name="profile_image">Profile Image</string>
    <string name="add_post_maximum">Maximum of 10 images allowed</string>
    <string name="title_home">Home</string>
    <string name="follow_me">Follow</string>
    <string name="show_likes">%s likes </string>
    <string name="post_description"><b>%s \n\n %s</b></string>
    <string name="likes_format"><b> %d likes  </b></string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="posts">Posts</string>
    <string name="like_post">Like Post</string>
    <string name="comment_post">Comment About Post</string>
    <string name="following">Following</string>
    <string name="follows">Followers</string>
    <string name="no_post">No post yet </string>
    <string name="zero">0</string>
    <string name="last_updated_format">Last updated : %s %s</string>
    <string name="follow_client">No posts in your feed. \n\n <b>Follow other users to see their posts </b></string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading...</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="no_users_found">No users found \n Please modify keyword</string>
    <string name="unfollow">Unfollow</string>
</resources>