<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.posts.FinishPostFragment">

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/anim_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/txt_anim_right"
            style="@style/loading_drawable_style"
            />
        <TextView
            style="@style/loading_drawable_style"
            android:id="@+id/txt_anim_center"
            android:background="@drawable/spinner_anim_around"
            />
        <TextView
            android:id="@+id/txt_anim_left"
            android:background="@drawable/spinner_anim_black"
            style="@style/loading_drawable_style" />

    </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/lay"
            android:padding="4dp"
            android:layout_width="120dp"
            android:layout_margin="8dp"
            android:layout_height="160dp"
            android:maxHeight="160dp"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/finish_image_1"
                android:layout_width="80dp"
                android:scaleType="fitCenter"
                android:layout_height="120dp"
                android:elevation="4dp"
                android:contentDescription="@string/add_photo"
                android:background="@drawable/finish_post_card"
                android:src="@drawable/auth_person" />

            <ImageView
                android:id="@+id/finish_image_2"
                android:layout_width="80dp"
                android:layout_height="120dp"
                android:contentDescription="@string/post_image"
                android:background="@drawable/finish_post_card"
                android:src="@drawable/auth_person"
                android:translationX="25dp"
                android:elevation="4dp"
                android:translationY="-100dp" />

        </LinearLayout>

        <EditText

            android:id="@+id/edt_finish_caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:fontFamily="@font/roboto"
            android:gravity="top|start"

            android:hint="@string/post_caption"
            android:inputType="textMultiLine|textVisiblePassword"
            android:minWidth="100dp"
            android:minHeight="160dp"
            android:padding="4dp"
            android:textColorHint="#827717"
            android:textSize="18sp"
            android:autofillHints="" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_create_post"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:enabled="false"
        android:gravity="center"
        android:background="@drawable/finish_post_edittext_bg"
        android:text="@string/finish_post"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16sp"
        />


</LinearLayout>